fatti color sezioni e col giuste x break points

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     <title>My Spotyfy</title>
   </head>
   <body>
-    <div class="app w100vw h100vh grey-txt flex">
+    <div class="app w100vw h100vh grey-txt flex secondary-color-bg">
       <!-- ASIDE -->
-      <aside class="w70px h100" style="border: 1px solid green">aside</aside>
+      <aside class="w70px h100 black-color-bg">aside</aside>
       <!-- CONT AVVOLGITORE DI TUTTO MENO ASIDE -->
       <div class="wrap-all-but-aside">
         <!-- HEADER -->
-        <header class="h100px" style="border: 1px solid blue">header</header>
+        <header class="h100px">header</header>
         <!-- MAIN -->
         <main class="primary-color-bg">main</main>
         <!-- FOOTER -->
-        <footer class="h100px" style="border: 1px solid red">footer</footer>
+        <footer class="h100px">footer</footer>
       </div>
     </div>
   </body>
