inizio icone aside

--- a/index.html
+++ b/index.html
@@ -22,7 +22,29 @@
       <div class="wrap-all-but-footer h90">
         <!-- AVVOLGITORE aside E CONTENITORE header + main -->
         <div class="wrap-aside-headerMain flex h100">
-          <aside class="w80px h100 black-color-bg"></aside>
+          <aside class="w40px h100 black-color-bg flex-y space-between py-8">
+            <!-- icone in alto -->
+            <div
+              class="icon-top-wrap w100 h130px flex-y space-between align-items-center"
+              style="border: 1px solid red"
+            >
+              <img src="img/logo-small.svg" alt="logo" class="w70" />
+              <img src="img/home.svg" alt="home" class="w70" />
+              <img src="img/search.svg" alt="search" class="w70" />
+              <img src="img/libreria.svg" alt="libreria" class="w70" />
+            </div>
+            <!-- icone in basso -->
+            <div
+              class="icon-bottom-wrap w100 h78px flex-y space-between align-items-center"
+              style="border: 1px solid red"
+            >
+              <div
+                class="profile-wrap third-color-bg w30px h30px flex-xy-center border-rad50"
+              >
+                <img src="img/profile.svg" alt="profile" class="w20px" />
+              </div>
+            </div>
+          </aside>
           <div class="wrap-header-and-main h100 pos-rel">
             <header
               class="top0-left0-of-abs w100 h90px secondary-color-bg"
