quasi finiti interni menu mobile

--- a/index.html
+++ b/index.html
@@ -23,26 +23,145 @@
         <!-- AVVOLGITORE aside E CONTENITORE header + main -->
         <div class="wrap-aside-headerMain flex h100">
           <aside class="w40px h100 black-color-bg flex-y space-between py-8">
+            <!-- MENU IN VERSIONE MOBILE -->
             <!-- icone in alto -->
             <div
-              class="icon-top-wrap w100 h130px flex-y space-between align-items-center"
-              style="border: 1px solid red"
+              class="icon-wrap-mobile w100 h130px flex-y space-between align-items-center"
             >
-              <img src="img/logo-small.svg" alt="logo" class="w70" />
-              <img src="img/home.svg" alt="home" class="w70" />
-              <img src="img/search.svg" alt="search" class="w70" />
-              <img src="img/libreria.svg" alt="libreria" class="w70" />
+              <img src="img/logo-small.svg" alt="logo" class="w65" />
+              <img src="img/home.svg" alt="home" class="w65" />
+              <img src="img/search.svg" alt="search" class="w65" />
+              <img src="img/libreria.svg" alt="libreria" class="w65" />
             </div>
             <!-- icone in basso -->
             <div
-              class="icon-bottom-wrap w100 h78px flex-y space-between align-items-center"
-              style="border: 1px solid red"
+              class="icon-wrap-mobile w100 h68px flex-y space-between align-items-center"
             >
+              <img src="img/download.svg" alt="arrow-down" class="w20px" />
               <div
-                class="profile-wrap third-color-bg w30px h30px flex-xy-center border-rad50"
+                class="profile-wrap grey-color-bg w27px h30px flex-xy-center border-rad50"
               >
                 <img src="img/profile.svg" alt="profile" class="w20px" />
               </div>
+            </div>
+            <!-- MENU IN VERSIONE DA SCHERMI MD IN SU -->
+            <div class="upper-mobile-wrapper flex-y space-between h100 pt-8">
+              <!-- logo da m in su -->
+              <div class="biglogo-wrapper w100 flex-xy-center">
+                <img src="img/logo.svg" alt="logo-big" class="w57" />
+              </div>
+              <!-- wrapper dela parte alta -->
+              <div
+                class="logoHomePlaylist-wraper h92 align-items-center"
+                style="border: 1px solid blue"
+              >
+                <!-- lista icone da me in su -->
+                <ul
+                  class="upper-icon-from-m no-list-style w100 pt-17"
+                  style="border: 0px solid yellow"
+                >
+                  <li>
+                    <a
+                      class="in-line-b w100 no-decorate fff-color pl-10 font-s08rem mb-8"
+                      href=""
+                    >
+                      <img
+                        src="img/home.svg"
+                        alt="home"
+                        class="vertical-middle w11"
+                      />
+                      Home
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      class="in-line-b w100 no-decorate grey-txt pl-13 font-s08rem hover-fff-color mb-8"
+                      href=""
+                    >
+                      <img
+                        src="img/search.svg"
+                        alt="search"
+                        class="vertical-middle w11"
+                      />
+                      Cerca
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      class="in-line-b w100 no-decorate grey-txt pl-13 font-s08rem hover-fff-color mb-8"
+                      href=""
+                    >
+                      <img
+                        src="img/libreria.svg"
+                        alt="libreria"
+                        class="vertical-middle w11"
+                      />
+                      La tua libreria
+                    </a>
+                  </li>
+                </ul>
+                <!-- inizio lista playlist -->
+                <div class="playlist-wrapper w100 h8 mt-8">
+                  <h5 class="text-align-left uppercase fff-color pl-13 pb-8">
+                    Playlist
+                  </h5>
+                  <ul class="">
+                    <li>
+                      <a
+                        href=""
+                        class="in-line-b no-decorate grey-txt pl-13 font-s08rem pb-8"
+                        >Crea Playlist</a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        href=""
+                        class="in-line-b no-decorate grey-txt pl-13 font-s08rem pb-8"
+                        >Nuova Playlist</a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        href=""
+                        class="in-line-b no-decorate grey-txt pl-13 font-s08rem pb-8"
+                        >Nuova Playlist</a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        href=""
+                        class="in-line-b no-decorate grey-txt pl-13 font-s08rem pb-8"
+                        >Nuova Playlist</a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        href=""
+                        class="in-line-b no-decorate grey-txt pl-13 font-s08rem pb-8"
+                        >Nuova Playlist</a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        href=""
+                        class="in-line-b no-decorate grey-txt pl-13 font-s08rem pb-8"
+                        >Nuova Playlist</a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        href=""
+                        class="in-line-b no-decorate grey-txt pl-13 font-s08rem pb-8"
+                        >Nuova Playlist</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div
+                class="instalApProfile-wrap h12"
+                style="border: 1px solid blue"
+              ></div>
             </div>
           </aside>
           <div class="wrap-header-and-main h100 pos-rel">
