--- a/index.html
+++ b/index.html
@@ -69,25 +69,22 @@
                 </a>
               </li>
             </ul>
-            <!-- MENU IN VERSIONE DA SCHERMI MD IN SU -->
+            <!-- MENU IN VERSIONE DA SCHERMI M IN SU -->
             <div class="upper-mobile-wrapper flex-y space-between h100 pt-8">
               <!-- logo da m in su -->
               <div class="biglogo-wrapper w100 flex-xy-center">
                 <img src="img/logo.svg" alt="logo-big" class="w57" />
               </div>
-              <!-- wrapper dela parte alta -->
+              <!-- wrapper della parte alta -->
               <div
-                class="logoHomePlaylist-wraper h92 align-items-center"
+                class="logoHomePlaylist-wraper h89 align-items-center"
                 style="border: 1px solid blue"
               >
                 <!-- lista icone da m in su -->
-                <ul
-                  class="upper-icon-from-m no-list-style w100 pt-17"
-                  style="border: 0px solid yellow"
-                >
+                <ul class="upper-icon-from-m no-list-style w100 pt-17">
                   <li>
                     <a
-                      class="in-line-b w100 no-decorate fff-color pl-10 font-s08rem mb-8"
+                      class="in-line-b w100 no-decorate fff-color pl-10 font-s08rem mb-8 active-aside"
                       href=""
                     >
                       <img
@@ -136,7 +133,7 @@
                     <li>
                       <a
                         href=""
-                        class="in-line-b no-decorate grey-txt pl-13 font-s08rem pb-8"
+                        class="create-playlist hover-fff-color in-line-b no-decorate grey-txt pl-13 font-s08rem pb-8"
                       >
                         <i
                           class="fas fa-plus black-color font-s1e10rem p-7 hover-fff-color-bg"
@@ -191,7 +188,7 @@
               </div>
               <!-- icone sotto aside in versione da m in poi -->
               <div
-                class="instalApProfile-wrap h12"
+                class="instalApProfile-wrap h11 ml-13"
                 style="border: 1px solid blue"
               >
                 <a href="" class="no-decorate grey-txt font-s08rem h10px">
@@ -201,25 +198,27 @@
                     class="w15px vertical-align-sub mr-10"
                   />Installa app
                 </a>
-                <div class="line h2px grey-color-bg w80 border-rad2 my-7"></div>
-
-                <div class="w100 pos-rel">
-                  <a
-                    href=""
-                    class="in-line-b pos-rel grey-color-bg w22px h22px flex-xy-center border-rad50 w100"
+                <!-- linea horizontal rule tra istalla e avatar profilo -->
+                <div
+                  class="line h1px grey-color-bg w92 border-rad2 my-11"
+                ></div>
+                <!-- avatar e nome profilo -->
+                <a href="" class="in-line-b w100 pos-rel"
+                  ><div
+                    class="pos-rel grey-color-bg w22px h22px flex-xy-center border-rad50"
                   >
                     <img
                       src="img/profile.svg"
                       alt="profile"
                       class="w15px center-of-abs"
                     />
-                    <h5
-                      class="in-line-b no-decorate fff-color centerY-of-abs ml-6"
-                    >
-                      John Doe
-                    </h5>
-                  </a>
-                </div>
+                  </div>
+                  <h5
+                    class="profile-name in-line-b no-decorate fff-color centerY-of-abs ml-6"
+                  >
+                    John Doe
+                  </h5>
+                </a>
               </div>
             </div>
           </aside>
