--- a/index.html
+++ b/index.html
@@ -76,15 +76,12 @@
                 <img src="img/logo.svg" alt="logo-big" class="w57" />
               </div>
               <!-- wrapper della parte alta -->
-              <div
-                class="logoHomePlaylist-wraper h89 align-items-center"
-                style="border: 1px solid blue"
-              >
+              <div class="logoHomePlaylist-wraper h89 align-items-center">
                 <!-- lista icone da m in su -->
                 <ul class="upper-icon-from-m no-list-style w100 pt-17">
                   <li>
                     <a
-                      class="in-line-b w100 no-decorate fff-color pl-10 font-s08rem mb-8 active-aside"
+                      class="active-aside in-line-b w100 no-decorate fff-color font-s08rem pl-13 pb-6 pt-6"
                       href=""
                     >
                       <img
@@ -97,7 +94,7 @@
                   </li>
                   <li>
                     <a
-                      class="in-line-b w100 no-decorate grey-txt pl-13 font-s08rem hover-fff-color mb-8"
+                      class="in-line-b w100 no-decorate grey-txt font-s08rem hover-fff-color pl-13 pb-6 pt-6"
                       href=""
                     >
                       <img
@@ -110,7 +107,7 @@
                   </li>
                   <li>
                     <a
-                      class="in-line-b w100 no-decorate grey-txt pl-13 font-s08rem hover-fff-color mb-8"
+                      class="in-line-b w100 no-decorate grey-txt font-s08rem hover-fff-color pl-13 pb-6 pt-6"
                       href=""
                     >
                       <img
@@ -187,10 +184,7 @@
                 </div>
               </div>
               <!-- icone sotto aside in versione da m in poi -->
-              <div
-                class="instalApProfile-wrap h11 ml-13"
-                style="border: 1px solid blue"
-              >
+              <div class="instalApProfile-wrap h11 ml-13">
                 <a href="" class="no-decorate grey-txt font-s08rem h10px">
                   <img
                     src="img/download.svg"
