bottone su header fatto

--- a/index.html
+++ b/index.html
@@ -218,8 +218,14 @@
           </aside>
           <div class="wrap-header-and-main h100 pos-rel">
             <header
-              class="top0-left0-of-abs w100 h90px secondary-color-bg"
-            ></header>
+              class="flex justify-end align-items-center top0-left0-of-abs w100 h90px secondary-color-bg"
+            >
+              <button
+                class="fff-color border-1px secondary-color-bg font-s06rem border-rad27 pl-27 pr-30 pt-9 pb-9"
+              >
+                EFFETTUA L'UPGRADE
+              </button>
+            </header>
             <main class="h100 overflow-y-auto p-20 pt-110 primary-color-bg">
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
