altezza footer indipendente da altezza schermo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <div class="app w100vw h100vh grey-txt flex-y">
       <!-- AVVOLGITORE DI TUTO TRANNE FOOTER -->
-      <div class="wrap-all-but-footer h90">
+      <div class="wrap-all-but-footer">
         <!-- AVVOLGITORE aside E CONTENITORE header + main -->
         <div class="wrap-aside-headerMain flex h100">
           <!-- ****** -->
@@ -227,7 +227,7 @@
               class="flex justify-end align-items-center top0-left0-of-abs w100 h90px secondary-color-bg p-10"
             >
               <button
-                class="fff-color border-1px secondary-color-bg font-s06rem border-rad30 pl-32 pr-32 pt-11 pb-11"
+                class="fff-color border-1px secondary-color-bg font-s06rem border-rad30 pl-32 pr-32 pt-11 pb-11 cursor-pointer"
               >
                 EFFETTUA L'UPGRADE
               </button>
@@ -458,7 +458,7 @@
       <!-- ****** -->
       <!-- FOOTER -->
       <footer
-        class="h10 z-index-10 w100vw third-color-bg flex v space-between align-items-center p-10"
+        class="h90px z-index-10 w100vw third-color-bg flex v space-between align-items-center p-10"
       >
         <!-- brano wraper -->
         <div
@@ -501,7 +501,7 @@
           </ul>
         </div>
         <!-- player wraper -->
-        <div class="player-wrap flex-y space-between h45px w35">
+        <div class="player-wrap flex-y space-between h50px w35">
           <!-- parte alta del player -->
           <div class="flex justify-center">
             <!-- avvolgitore bottoni per centrarli nella parte alta -->
@@ -565,7 +565,7 @@
         </div>
         <!-- volum wraper -->
         <ul
-          class="volum-wrap flex space-between align-items-center w30 no-list-style"
+          class="volum-wrap flex space-between align-items-center w25 no-list-style"
         >
           <li>
             <a href="" class="grey-txt">
